# sst1mpipe

./: .buildinfo  .gitattributes  README.md  environment.yml  genindex.html  index.html  introduction.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sst1m_analysis_workflow.html
.doctrees/: environment.pickle  index.doctree  introduction.doctree  sst1m_analysis_workflow.doctree
.github/workflows/: ci.yml  docs-pages.yml  documentation.yml
_static/: documentation_options.js
docs/: conf.py  index.rst  introduction.rst  sst1m_analysis_workflow.rst
docs/api/: analysis.rst  calib.rst  index.rst  instrument.rst  io.rst  package.rst  performance.rst  reco.rst  utils.rst
docs/sst1mpipe_api/analysis/: index.rst
notebooks/: mc_dl1_check.ipynb  run_and_visualize_calibration.ipynb  sst1m_high_level_analysis_skymap_theta2.ipynb  sst1m_high_level_analysis_spectrum.ipynb  sst1m_raw_r0_r1.ipynb  sst1mpipe_data_photon_list_analysis.ipynb  sst1mpipe_dl1_data_check.ipynb
sst1mpipe/: __init__.py  constants.py
sst1mpipe/analysis/: __init__.py  analysis.py  data_quality.py  muon_finder.py  visualization.py
sst1mpipe/calib/: __init__.py  calib.py  pulse_shape_maker.py
sst1mpipe/data/: sst1mpipe_data_config.json  sst1mpipe_mc_config.json
sst1mpipe/instrument/: __init__.py  camera.py  geometry.py
sst1mpipe/io/: __init__.py  containers.py  dl2_to_dl3.py  io.py  sst1m_event_source.py
sst1mpipe/performance/: __init__.py  performance.py  sensitivity.py  spectra.py
sst1mpipe/reco/: __init__.py  reco.py
sst1mpipe/resources/fixtures/: SST1M2_20251218_0350.fits.fz  SST1M2_20251218_0350_W1_dl1.h5  SST1M2_20251218_0350_W1_dl1_dl2.h5  SST1M2_20251218_0351.fits.fz  SST1M_CTA1_obs_id_202512180350_dl3.fits  default_sst1mpipe_data_config_analysis.json  intensity_hist_tel_022_202512180350.h5
sst1mpipe/resources/zfits/: SST1M1_20260121_0001.fits.fz  SST1M2_20260121_0001.fits.fz
sst1mpipe/scripts/: __init__.py  create_hdu_indexes.py  daily_analysis.py  dark_run_mes_fitter.py  rate_scans_extraction.py  read_camera_server_logs.py  sst1mpipe_data_dl1_dl1_stereo.py  sst1mpipe_data_dl2_dl3.py  sst1mpipe_data_get_photon_list.py  sst1mpipe_dl1_dl2.py  sst1mpipe_event_classes.py  sst1mpipe_extract_dl1_distributions.py  sst1mpipe_get_tunning_params.py  sst1mpipe_mc_event_classes.py  sst1mpipe_mc_make_irfs.py  sst1mpipe_mc_performance.py  sst1mpipe_mc_train_rfs.py  sst1mpipe_mc_train_rfs_misdirection.py  sst1mpipe_merge_hdf5.py  sst1mpipe_night_summary.py  sst1mpipe_obsplan.py  sst1mpipe_pointing_check.py  sst1mpipe_r0_dl1.py
sst1mpipe/tests/: test_dummy.py
sst1mpipe/utils/: NSB_tools.py  __init__.py  cleaning.py  monitoring_pedestals.py  monitoring_r0_dl1.py  utils.py
tests/: conftest.py  test_0_sst1mpipe_r0_dl1.py  test_1_sst1mpipe_dl1_dl2.py  test_2_sst1mpipe_dl2_dl3.py  test_3_extract_dl1_distributions.py  test_eventsource.py  test_import.py  test_import_files.py
