[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sst1mpipe"
version = "0.9.0-dev"
description = "Analysis chain for the SST-1M prototype"
authors = [
  { name = "SST-1M collaboration" }
  ]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
  "h5py",
  "ctapipe~=0.17.0",
  "ctaplot~=0.6.2",
  "gammapy~=1.0",
  "pyirf~=0.8.0",
  "jupyterlab~=3.5.2",
  "scikit-learn~=1.2.2",
  "astroquery~=0.4.6",
  "seaborn~=0.13.0",
  "tables~=3.8.0",
  "pydantic>=1.4,<2.0"
]

[project.urls]
Homepage = "https://sst-1m.space/"
Repository = "https://github.com/SST-1M-collaboration/sst1mpipe"
Documentation = "https://sst1mpipe.readthedocs.io/"

[metadata]


[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "sphinx_argparse",
  "sphinx_rtd_theme",
  "numpydoc",
  "nbsphinx",
  "sphinxcontrib-mermaid",
  "sphinx-togglebutton"
]

test = [
    "pytest"
]


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sst1mpipe = [
  "data/*",
  "resources/camera_config.cfg"
]



[project.scripts]
sst1mpipe_dl1_dl2 = "sst1mpipe.scripts.sst1mpipe_dl1_dl2:main"
sst1mpipe_data_dl1_dl1_stereo = "sst1mpipe.scripts.sst1mpipe_data_dl1_dl1_stereo:main"
sst1mpipe_data_get_photon_list = "sst1mpipe.scripts.sst1mpipe_data_get_photon_list:main"
sst1mpipe_data_dl2_dl3 = "sst1mpipe.scripts.sst1mpipe_data_dl2_dl3:main"
sst1mpipe_get_tunning_params = "sst1mpipe.scripts.sst1mpipe_get_tunning_params:main"
sst1mpipe_mc_performance = "sst1mpipe.scripts.sst1mpipe_mc_performance:main"
sst1mpipe_mc_make_irfs = "sst1mpipe.scripts.sst1mpipe_mc_make_irfs:main"
sst1mpipe_r0_dl1 = "sst1mpipe.scripts.sst1mpipe_r0_dl1:main"
sst1mpipe_mc_train_rfs = "sst1mpipe.scripts.sst1mpipe_mc_train_rfs:main"
sst1mpipe_merge_hdf5 = "sst1mpipe.scripts.sst1mpipe_merge_hdf5:main"
sst1mpipe_pointing_check = "sst1mpipe.scripts.sst1mpipe_pointing_check:main"
rate_scans_extraction = "sst1mpipe.scripts.rate_scans_extraction:main"
create_hdu_indexes = "sst1mpipe.scripts.create_hdu_indexes:main"
sst1mpipe_extract_dl1_distributions = "sst1mpipe.scripts.sst1mpipe_extract_dl1_distributions:main"
sst1mpipe_night_summary = "sst1mpipe.scripts.sst1mpipe_night_summary:main"
sst1mpipe_obsplan = "sst1mpipe.scripts.sst1mpipe_obsplan:main"
sst1mpipe_mc_train_rfs_misdirection = "sst1mpipe.scripts.sst1mpipe_mc_train_rfs_misdirection:main"
sst1mpipe_event_classes = "sst1mpipe.scripts.sst1mpipe_event_classes:main"
sst1mpipe_read_camera_server_logs = "sst1mpipe.scripts.read_camera_server_logs:main"


[tool.ruff.lint]
select = ["F", "E", "W"]
extend-select = ["B", "RET505", "RET507", "PIE808", "UP015", "UP032", "RUF037", "SIM910"]
ignore = ["E501"]

per-file-ignores = { "**/__init__.py" = ["F401"] }

[tool.pytest.ini_options]
pythonpath = ["sst1mpipe"]
